--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"0": {"author": "A. Persius Flaccus", "title": "Saturae", "filename": "phi0969.phi001.perseus-lat2.xml", "path": "lat\\perseus_xml\\index\\a-persius-flaccus\\saturae", "index": "perseus_xml_a-persius-flaccus_saturae_0"}}
+{"0": {"author": "A. Persius Flaccus", "title": "Saturae", "filename": "phi0969.phi001.perseus-lat2.xml", "path": "lat\\perseus_xml\\index\\a-persius-flaccus\\saturae", "index": ["_perseus_xml_a-persius-flaccus_saturae_0_2.toc", "perseus_xml_a-persius-flaccus_saturae_0_7b9qinotsxo76td0.seg"]}}
